# transmit_data

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.md
.data/: stores.pckl
.github/workflows/: check_builds.yaml  hello.yaml
applications/: CMakeLists.txt
applications/app1/: CMakeLists.txt  main.cpp
include/: receiver.hpp
scripts/: add_requirements_ids.py  build  build_apps  execute
src/: main.cpp  receiver.cpp
